retorte laboratories (retorte.ch) IntervalMusicCompositor change log
--------------------------------------------------------------------------------

2022-03-29  2.11.3
--------------------------------------------------------------------------------
FIX  #65    Self-Upgrade: Wrong root directory chosen in Linux.
FIX  #66    Crash when user has old assistive technology config file in system.


2021-11-13  2.11.2
--------------------------------------------------------------------------------
FIX  #64    Self-Upgrade: Downloading new version fails with 'handshake failure'.


2021-11-12  2.11.1
--------------------------------------------------------------------------------
FIX  #63    Crash when changing compilation parameters with empty track list.


2021-10-31  2.11.0
--------------------------------------------------------------------------------
ADD  #28    Streamlines upgrade process by adding one-click-updater.
ADD  #49    Adds mailto button to error dialog.
IMP         Upgrades the bundled runtime to Java 17.
IMP  #55    Increases sound effect fade in duration to .4 seconds (from .2 s).
FIX         'Too long' indicator in list overrides all other states, even errors.
FIX  #62    Tracks in the current directory are not anymore added automatically.


2021-07-11  2.10.0
--------------------------------------------------------------------------------
IMP  #59    Inactivates process button if no compilation is possible.
FIX  #61    Failing encoding tests in some environment by explicitly states encoding.
FIX  #58    Crash with wrong Java version by bundling Java with the application.
FIX  #60    In advanced pattern too long breaks with break track were swallowed.
FIX         Settings in the starting window were not reflected in preferences dialog.
FIX         Error when non-integer numbers were entered into duration fields.


2019-03-05  2.9.2
--------------------------------------------------------------------------------